_sass/_posts.scss
// Posts and pages
//
// Each post is wrapped in `.post` and is used on default and post layouts. Each
// page is wrapped in `.page` and is only used on the page layout.

.page,
.post {
  a {
    text-decoration: underline;  
  
    &.more {
      font-family: $secondary-font-family-semibold;
    }
  }

  ul {
    margin-left: 1rem;
    padding: 0;

    ul {
      margin-bottom: .5rem;
      margin-top: .5rem;
    }
  }

  img {
    margin-bottom: 1.5rem;
  }

  img.center {
    border: 1px solid #d5d5d5;
    margin: 0 auto 1.5rem;
    width: 65%;
  
    @media only screen and (max-width: $large-breakpoint) {
      width: 85%;
    }
  }

}

// Blog post or page title
.page-title,
.post-title {
  font-size: 2rem;
  margin-bottom: .5rem;
  margin-top: 0;

  a {
    color: $gray-6;
    text-decoration: none;
    
    &:hover {
      color: $link-color;
    }
  }
}

// Meta data line below post title
.post-metadata {

  div {
    color: $gray-3;
    display: inline-block;
    font-family: $secondary-font-family-semibold;
    line-height: 1;
    margin-bottom: 1rem;
    margin-right: 1rem;

    // Publish date
    time {
      display: inline-block;
    }

    // Tags
    ul {
      display: inline-block;
      margin: 0;
      padding: 0;

      li {
        display: inline-block;
        list-style: none;
      }
    }
  }
}

.archive-date {
  color: $gray-3;
  display: block;
  font-size: .875rem;
}

.embed {
  margin: 1.5rem 0 2rem;
}

// Tags page
.tags {
  font-family: $secondary-font-family-semibold;

  h3 {
    margin-top: 0;
  }
  
  .row {
    margin-bottom: 1rem;
  }
  
  a {
    text-decoration: underline;
  }
}

// Related posts
.related {
  border-top: 2px solid $border-color;
  font-family: $secondary-font-family-semibold;
  margin-bottom: 2rem;

  .related-posts {
    list-style: none;
    padding-left: 0;

    h3 {
      border-top: 1px solid $white-sand;
      margin-bottom: 1rem;
      margin-top: 1.5rem;
      padding-top: 1rem;
    }

    li {

      margin-bottom: .5rem;

      a {
        text-decoration: underline;
      }

      span {
        color: $gray-3;
        font-size: .875rem;
        white-space: nowrap;
      }
    }
  }
}

